--- a/index.html
+++ b/index.html
@@ -16,34 +16,38 @@
 
     <section>
       <div id = "header">
-        <img id = "avatar" src="/images/avatar.jpg" alt="avatar">
-        <div>
-          <p>Samuel Green</p>
-          <p>Available to Walk</p>
+        <div id="notch"></div>
+        <div id = "c">
+          <button id = "back"><</button>
+          <img id = "avatar" src="/images/avatar.jpg" alt="avatar">
+          <div>
+            <p>Samuel Green</p>
+            <p>Available to Walk</p>
+          </div>
         </div>
       </div>
       <div id = "chat">
-        <p class = "c-message">That sounds great. I’d be happy with that.</p>
-        <p class = "c-message">Could you send over some pictures of your dog, please?</p>
+        <p class = "c-message message">That sounds great. I’d be happy with that.</p>
+        <p class = "c-message message">Could you send over some pictures of your dog, please?</p>
         <div class = "u-pictures">
           <img src="/images/dog-image-1.jpg" alt="dog-image-1">
           <img src="/images/dog-image-2.jpg" alt="dog-image-2">
           <img src="/images/dog-image-3.jpg" alt="dog-image-3">
         </div>
-        <p class = "u-message">Here are a few pictures. She’s a happy girl!</p>
-        <p class = "u-message">Can you make it?</p>
-        <p class = "c-message">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
-        <div class = "c-payment">
-          <p>30 minute walk</p>
-          <p>$29</p>
+        <p class = "u-message message">Here are a few pictures. She’s a happy girl!</p>
+        <p class = "u-message message">Can you make it?</p>
+        <p class = "c-message message">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
+        <div class = "c-payment message">
+          <p><strong>></strong> 30 minute walk</p>
+          <p><strong>$29</strong></p>
         </div>
-        <div class = "c-payment">
-          <p>1 hour walk</p>
-          <p>$49</p>
+        <div class = "c-payment message">
+          <p><strong>></strong> 1 hour walk</p>
+          <p><strong>$49</strong></p>
         </div>
       </div>
-      <div id = "message">
-        <p>Type a message…</p>
+      <div id = "answer">
+        <input type="text" placeholder="Type a message…">
         <button>></button>
       </div>
     </section>
