--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/cromega08/chat_app_illustration/blob/master/images/favicon-32x32.png?raw=true">
     <link rel="stylesheet" href="style.css">
 
     <title>
@@ -38,7 +38,7 @@
         <div id="notch"></div>
         <div id = "c">
           <button id = "back"><</button>
-          <img id = "avatar" src="/images/avatar.jpg" alt="avatar">
+          <img id = "avatar" src="https://github.com/cromega08/chat_app_illustration/blob/master/images/avatar.jpg?raw=true" alt="avatar">
           <div>
             <p>Samuel Green</p>
             <p>Available to Walk</p>
@@ -49,9 +49,9 @@
         <p class = "c-message message">That sounds great. I’d be happy with that.</p>
         <p class = "c-message message">Could you send over some pictures of your dog, please?</p>
         <div class = "u-pictures">
-          <img src="/images/dog-image-1.jpg" alt="dog-image-1">
-          <img src="/images/dog-image-2.jpg" alt="dog-image-2">
-          <img src="/images/dog-image-3.jpg" alt="dog-image-3">
+          <img src="https://github.com/cromega08/chat_app_illustration/blob/master/images/dog-image-1.jpg?raw=true" alt="dog-image-1">
+          <img src="https://github.com/cromega08/chat_app_illustration/blob/master/images/dog-image-2.jpg?raw=true" alt="dog-image-2">
+          <img src="https://github.com/cromega08/chat_app_illustration/blob/master/images/dog-image-3.jpg?raw=true" alt="dog-image-3">
         </div>
         <p class = "u-message message">Here are a few pictures. She’s a happy girl!</p>
         <p class = "u-message message">Can you make it?</p>
@@ -81,6 +81,6 @@
   </body>
   <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Cromega</a>.
+    Coded by <a href="https://github.com/cromega08">Cromega</a>.
   </footer>
 </html>
