--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--
-    <Chat_App_Illustration: A illustration made for a Fronten Mentor Challenge>
+    <Chat_App_Illustration: A illustration made for a Frontend Mentor Challenge>
     Copyright (C) <2022>  <Cromega>
 
     This program is free software: you can redistribute it and/or modify
